yml파일 설정, log설정(file)

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Kakao_API_PJ</name>
-	<comment>Project Kakao_API_PJ created by Buildship.</comment>
+	<name>KakaoApiPj</name>
+	<comment>Project KakaoApiPj created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
